[GTK] GTK does not expose heading level correctly. Was: accessibility/heading-level.html is failing https://bugs.webkit.org/show_bug.cgi?id=106924

Reviewed by Chris Fleizach.

Tools:

Consider headings levels as values to be returned in intValue()
both in DRT and WKTR, so we can share more tests with other ports.

* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::intValue): Consider headings too.
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::intValue): Ditto.

LayoutTests:

Removed accesibility/heading-level.html from failure expectations.

* platform/gtk/TestExpectations: Removed test now passing.

Canonical link: https://commits.webkit.org/140050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156551 268f45cc-cd09-0410-ab3c-d52691b4dbfc